# FIREKit

./: README.md
docs/: ECOSYSTEM_OVERVIEW.md
docs/products/: 01_vectorforge.md  02_datastream.md  03_alphalab.md  04_signalml.md  05_sentimentpulse.md  06_deeptrader.md  07_executioncore.md  08_riskguard.md  09_portfolioengine.md
vectorforge/: EXECUTION_PLAN.md  README.md  pyproject.toml
vectorforge/tests/: __init__.py  conftest.py  test_analysis.py  test_engine.py  test_optimization.py  test_strategy.py
vectorforge/vectorforge/: __init__.py  config.py
vectorforge/vectorforge/analysis/: __init__.py  drawdown.py  metrics.py  trades.py
vectorforge/vectorforge/data/: __init__.py  guards.py  universe.py
vectorforge/vectorforge/engine/: __init__.py  base.py  event_driven.py  hybrid.py  vectorized.py
vectorforge/vectorforge/execution/: __init__.py  commission.py  slippage.py
vectorforge/vectorforge/optimization/: __init__.py  cross_validation.py  grid_search.py  walk_forward.py
vectorforge/vectorforge/strategy/: __init__.py  base.py  position.py
vectorforge/vectorforge/utils/: __init__.py  validation.py
